# thirty-nine-hundred-hci

./: .gitignore  .markdownlint.json  CLAUDE.md  Makefile  README.md  _config.toml  count_slides.sh  find_unused_images.py  generate_index.py  pyproject.toml  references.bib  restore-removed-file.sh
_draft/: 02-needs-finding.md  08-ethics.md  10-cultural-probe.md  conceptual-models.md  course-balance-audit-2026.md  course-design-analysis-2026.md  draft_slides.md  grocery-interview-codes.md  grocery-interview-example.md  universal-usability.md  week-09-2023-peer-review-lofi-proto.md
assessments/: 00-pre-and-in-class-tasks.md  00-workshop-tasks.md  01-prototyping.md  02-user-research.md  03-prototype-and-evaluation.md
course-entry/: COMP3900.md  COMP6390.md  anu-accred-handbook-summary.md
css/: charles1720-dark.scss  charles_reveal_dark.scss  slides.css
lectures/: 01-intro-to-hci.md  02-design.md  03-prototype.md  03-theories.md  04-data-gathering.md  04-universal-usability.md  05-data-analysis.md  05-evaluation.md  06-direct-manipulation.md  06-reflexive-thematic-analysis.md  07-interfaces.md  07-lecture.html  07-navigation.md  08-evaluation.md  08-expressive-interfaces.md  09-cognitive-social-emotional.md  09-devices.md  10-devices.md  10-search.md  10-statistical-analysis.md  11-data-visualisation.md  11-expressive-interfaces.md  12-human-centred-ai.md  13-data-gathering.md
notebooks/: analyse_survey_data.ipynb  create-fake-survey.ipynb  data-analysis.ipynb  hci_survey_data.csv
resources/: 01-class-policies.md  02-class-structure.md  03-technology-faqs.md  (+1 more)
(+35 files in other folders)
