[project]
name = "thirty-nine-hundred-hci"
version = "0.1.0"
description = ""
authors = [
    {name = "Charles Martin",email = "cpm@charlesmartin.com.au"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false